# drc-engine

./: .gitignore  CMakeLists.txt  ENCLOSURE_FIX_REPORT.md  README.md  analyze_datasets.py  generate_layouts.py
examples/: README.md  README_datasets.md  basic_spacing_violations.json  dataset_100.json  dataset_1000.json  dataset_10000.json  enclosure_demo.json  intersection_demo.json  layout_complex.json  layout_complex_with_rules.json  layout_invalid_bounds.json  layout_malformed.json  layout_only_example.json  layout_sample.json  mixed_shapes_demo.json  mixed_shapes_layers.json  realistic_dense_layout.json  rules_only_example.json  semiconductor_design.json  trapezoid_and_polygon.json
geometry/: GeometryUtils.hpp
include/core/: DrcEngine.hpp
include/drc/: DrcContext.hpp  DrcReport.hpp  DrcRule.hpp  DrcViolation.hpp
include/geometry/: GeometryUtils.hpp  Point.hpp  Rect.hpp
include/io/: JsonLayoutLoader.hpp  LayoutLoader.hpp  RulesJsonLoader.hpp
include/layout/: Layer.hpp  Layout.hpp  Polygon.hpp  Shape.hpp
include/rules/: ContainmentRule.hpp  EnclosureRule.hpp  IntersectionRule.hpp  MinAreaRule.hpp  MinSpacingRule.hpp  MinWidthRule.hpp
include/spatial/: BoostGeometryAdapters.hpp  NaiveSpatialIndex.hpp  RTreeSpatialIndex.hpp  SpatialIndex.hpp
src/app/: main.cpp  performance_comparison.cpp
src/core/: DrcEngine.cpp
src/drc/: DrcReport.cpp
src/gui/: CMakeLists.txt  GraphicsView.cpp  GraphicsView.hpp  LayoutScene.cpp  LayoutScene.hpp  MainWindow.cpp  MainWindow.hpp  launcher.sh.in  main.cpp
src/io/: JsonLayoutLoader.cpp  RulesJsonLoader.cpp
src/layout/: Layout.cpp
src/rules/: ContainmentRule.cpp  EnclosureRule.cpp  IntersectionRule.cpp  MinAreaRule.cpp  MinSpacingRule.cpp  MinWidthRule.cpp
src/spatial/: NaiveSpatialIndex.cpp  RTreeSpatialIndex.cpp  SpatialIndex.cpp
src/tests/: rule_tests.cpp
